2009-03-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for proper propagation of build params into gled-build.

	* GledBuildConf.pm.in:
	* MakeBuildConf.inc.in:
	* configure.ac:
	Add new configuration variables allowing full control over what
	SVN version of Gled and what external software is used:
	  CACHE_TAG  tag for external software;
	  SVN_BASE   SVN base URL;
	  SVN_DIR    SVN directory;
	  SVN_REV    SVN revison;
	  SVN_USER   SVN username.

	* gled/Makefile:
	Pass the new configuration variables to gled-build-checkout and to
	configure.

	* configure-branch.sh:
	* configure-tag.sh:
	New scripts - helpers for configuring tag / branch builds.

2009-03-30  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve management of external-package cache.

	* GledBuildExternal.pm:
	Add functions for cache handling and interaction.
	Use them also when setting up and downloading a package.

	* update_cache.pl:
	New script - updates the cache state, downloads new versions and
	optionally rebuilds the affected packages.

2009-03-07  Matevz Tadel  <matevz.tadel@ijs.si>

	Explicit usage of bash, quote vulnerable constructs in shell scripts.

	* Makefile:
	* MakeBuildExternal.inc:
	* MakeBuildGled.inc:
	* external/Makefile:
	Specify SHELL=/bin/bash.

	* gled/Makefile:
	Replace 'source' with '.' in canned target commands.

	* greed/top-blob/README:
	In instructions for bash, replace 'source' with '.'.
	Format the instructions so that they can be cut-n-pasted for both
	shell-types.

	* greed/top-blob/gled-env-dump.csh:
	* greed/top-blob/gled-env-dump.sh:
	* greed/top-blob/gled-env.csh:
	* greed/top-blob/gled-env.sh:
	* greed/top-blob/greed-demo-menu.sh:
	* greed/top-blob/greed-demo.sh:
	Quote all constructs where ' ' in path could lead to problems.
	Where relevant, replace 'source' with '.'.

2009-03-03  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/glew/glew.pl:
	Make sure lib/ exists before copying stuff from lib64/.

2009-03-03  Matevz Tadel  <matevz.tadel@ijs.si>
